--- a/html/wstaw.html
+++ b/html/wstaw.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dzień Pi - WstawianieS</title>
+    <title>Dzień Pi - Wstawianie</title>
     <style>
         table {
             border: 1px solid black;
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <h1>"Książkorama" wstawienie nowej ksiązki</h1>
+    <h1>Dzień Pi - wstawienie</h1>
     <form action="../php/wstaw.php" method="post">
         <table>
             <tr>
